# VisualStudioCode

./: DEPENDENCY_SECURITY_NOTES.md  package-lock.json  package.json
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: basic.yml  ci.yml  codeql.yml  dependency-review.yml  monaco-editor.yml  no-package-lock-changes.yml  scorecards.yml  telemetry.yml
cli/: Cargo.toml
extensions/: package-lock.json  package.json
extensions/configuration-editing/: package-lock.json  package.json
extensions/css-language-features/: package-lock.json  package.json
extensions/css-language-features/server/: package-lock.json  package.json
extensions/debug-auto-launch/: package-lock.json  package.json
extensions/debug-server-ready/: package-lock.json  package.json
extensions/emmet/: package-lock.json  package.json
extensions/extension-editing/: package-lock.json  package.json
extensions/git/: package-lock.json  package.json
extensions/git-base/: package-lock.json  package.json
extensions/git/src/: commands.ts  gitEditor.ts  repository.ts
extensions/git/src/test/: smoke.test.ts
extensions/github/: package-lock.json  package.json
extensions/github-authentication/: package-lock.json  package.json
extensions/grunt/: package-lock.json  package.json
extensions/gulp/: package-lock.json  package.json
extensions/html-language-features/: package-lock.json  package.json
extensions/html-language-features/server/: package-lock.json  package.json
extensions/html-language-features/server/src/modes/: javascriptMode.ts
extensions/html-language-features/server/src/test/: completions.test.ts
extensions/ipynb/: package-lock.json  package.json
extensions/ipynb/src/: serializers.ts
extensions/ipynb/src/test/: serializers.test.ts
extensions/jake/: package-lock.json  package.json
extensions/json-language-features/: package-lock.json  package.json
extensions/json-language-features/server/: package-lock.json  package.json
extensions/markdown-language-features/: package-lock.json  package.json
extensions/markdown-language-features/preview-src/: index.ts
extensions/markdown-language-features/src/languageFeatures/copyFiles/: shared.ts  snippets.ts
extensions/markdown-math/: package-lock.json  package.json
extensions/media-preview/: package-lock.json  package.json
extensions/media-preview/media/: imagePreview.js  videoPreview.js
extensions/merge-conflict/: package-lock.json  package.json
extensions/microsoft-authentication/: package-lock.json  package.json
extensions/notebook-renderers/: package-lock.json  package.json
extensions/npm/: package-lock.json  package.json
extensions/php-language-features/: package-lock.json  package.json
extensions/references-view/: package-lock.json  package.json
extensions/simple-browser/: package-lock.json  package.json
extensions/simple-browser/preview-src/: index.ts
extensions/terminal-suggest/src/: terminalSuggestMain.ts
extensions/terminal-suggest/src/completions/upstream/: git.ts  node.ts  pnpm.ts
extensions/terminal-suggest/src/fig/: figInterface.ts
extensions/terminal-suggest/src/fig/autocomplete-parser/: parseArguments.ts
extensions/tunnel-forwarding/: package-lock.json  package.json
extensions/typescript-language-features/: package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/typescript-language-features/src/: typescriptServiceClient.ts
extensions/typescript-language-features/src/configuration/: configuration.ts
extensions/typescript-language-features/src/languageFeatures/: jsDocCompletions.ts
extensions/typescript-language-features/src/languageFeatures/util/: textRendering.ts
extensions/typescript-language-features/src/tsServer/: spawner.ts
extensions/vscode-api-tests/: package-lock.json  package.json
extensions/vscode-api-tests/src/singlefolder-tests/: terminal.shellIntegration.test.ts
extensions/vscode-colorize-perf-tests/: package-lock.json  package.json
extensions/vscode-colorize-tests/: package-lock.json  package.json
extensions/vscode-colorize-tests/test/colorize-fixtures/: Dockerfile
extensions/vscode-test-resolver/: package-lock.json  package.json
remote/: package-lock.json  package.json
remote/web/: package-lock.json  package.json
src/vs/base/browser/ui/tree/: asyncDataTree.ts
src/vs/base/common/: htmlContent.ts  lifecycle.ts  marshalling.ts  objects.ts  resources.ts
src/vs/base/common/marked/: marked.js
src/vs/base/test/common/: resources.test.ts
src/vs/code/browser/workbench/: workbench.ts
src/vs/code/electron-main/: app.ts
src/vs/editor/browser/: view.ts
src/vs/editor/common/config/: editorOptions.ts
src/vs/editor/common/diff/defaultLinesDiffComputer/: computeMovedLines.ts
src/vs/editor/contrib/find/browser/: findWidget.css
src/vs/editor/contrib/hover/browser/: contentHoverController.ts  contentHoverWidget.ts
src/vs/platform/extensions/common/: extensionsApiProposals.ts
src/vs/platform/languagePacks/node/: languagePacks.ts
src/vs/platform/terminal/node/: terminalEnvironment.ts
src/vs/platform/update/common/: update.ts  updateIpc.ts
src/vs/platform/update/electron-main/: abstractUpdateService.ts  updateService.darwin.ts  updateService.snap.ts  updateService.win32.ts
src/vs/platform/workspace/common/: workspace.ts
src/vs/platform/workspaces/common/: workspaces.ts
src/vs/workbench/api/browser/: mainThreadSCM.ts
src/vs/workbench/api/common/: extHostWorkspace.ts
src/vs/workbench/api/node/: extHostCLIServer.ts  proxyResolver.ts
src/vs/workbench/browser/media/: style.css
src/vs/workbench/browser/parts/views/: treeView.ts
src/vs/workbench/contrib/chat/browser/: chatInputPart.ts  chatListRenderer.ts  chatSessions.ts  (+1 more)
src/vscode-dts/: vscode.proposed.terminalCompletionProvider.d.ts
test/automation/: package-lock.json  package.json
test/integration/browser/: package-lock.json  package.json
test/leaks/: package.json
test/monaco/: package-lock.json  package.json
test/smoke/: package-lock.json  package.json
(+36 files in other folders)
