[package]
name = "code-cli"
version = "0.1.0"
edition = "2021"
default-run = "code"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "code"

[dependencies]
futures = "0.3.31"
clap = { version = "4.5.54", features = ["derive", "env"] }
open = "5.3.3"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat", "codec"] }
flate2 = { version = "1.1.8", default-features = false, features = ["zlib"] }
zip = { version = "2.3.0", default-features = false, features = ["time", "deflate-zlib"] }
regex = "1.12.2"
lazy_static = "1.5.0"
sysinfo = { version = "0.37.2", default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde = "1.3.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
dirs = "6.0.0"
rand = "0.9.2"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
serde_bytes = "0.11.19"
chrono = { version = "0.4.43", features = ["serde", "std", "clock"], default-features = false }
gethostname = "1.1.0"
libc = "0.2.180"
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = ["connections"] }
keyring = { version = "2.0.3", default-features = false, features = ["linux-secret-service-rt-tokio-crypto-openssl", "platform-windows", "platform-macos", "linux-keyutils"] }
dialoguer = "0.12.0"
hyper = { version = "0.14.26", features = ["server", "http1", "runtime"] }
indicatif = "0.18.3"
tempfile = "3.11.0"
clap_lex = "0.7.7"
url = "2.5.4"
async-trait = "0.1.89"
log = "0.4.29"
const_format = "0.2.35"
sha2 = "0.10.9"
base64 = "0.22.1"
shell-escape = "0.1.5"
thiserror = "2.0.18"
cfg-if = "1.0.4"
pin-project = "1.1.10"
console = "0.16.2"
bytes = "1.11.0"
tar = "0.4.44"

[build-dependencies]
serde = { version="1.0.163", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.4.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = []
vsda = []
vscode-encrypt = []
