[package]
name = "code-cli"
version = "0.1.0"
edition = "2021"
default-run = "code"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "code"

[dependencies]
futures = "0.3.32"
clap = { version = "4.6.1", features = ["derive", "env"] }
open = "5.3.5"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat", "codec"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
zip = { version = "2.3.0", default-features = false, features = ["time", "deflate-zlib"] }
regex = "1.12.3"
lazy_static = "1.5.0"
sysinfo = { version = "0.39.3", default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.150"
rmp-serde = "1.3.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
dirs = "6.0.0"
rand = "0.10.1"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
serde_bytes = "0.11.19"
chrono = { version = "0.4.45", features = ["serde", "std", "clock"], default-features = false }
gethostname = "1.1.0"
libc = "0.2.186"
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = ["connections"] }
keyring = { version = "2.0.3", default-features = false, features = ["linux-secret-service-rt-tokio-crypto-openssl", "platform-windows", "platform-macos", "linux-keyutils"] }
dialoguer = "0.12.0"
hyper = { version = "0.14.26", features = ["server", "http1", "runtime"] }
indicatif = "0.18.4"
tempfile = "3.12.0"
clap_lex = "1.1.0"
url = "2.5.4"
async-trait = "0.1.89"
log = "0.4.30"
const_format = "0.2.36"
sha2 = "0.11.0"
base64 = "0.22.1"
shell-escape = "0.1.5"
thiserror = "2.0.18"
cfg-if = "1.0.4"
pin-project = "1.1.13"
console = "0.16.3"
bytes = "1.11.1"
tar = "0.4.46"

[build-dependencies]
serde = { version="1.0.163", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.4.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
# Security note: russh 0.37.1 has known advisories (GHSA-7jr8-5gqg-9fqf OOM DoS,
# GHSA-qqff-4vr4-enp6 Terrapin, GHSA-cqjm-7784-r8w9 overflow checks) that affect
# upstream crates.io versions < 0.44.0. This project uses microsoft/vscode-russh,
# a maintained fork that may include backported security patches not reflected in
# the version number. Upstream russh cannot be used directly because the microsoft
# fork contains vscode-specific modifications required by microsoft/dev-tunnels.
# TODO: Update this patch when microsoft/vscode-russh bumps the version past 0.44.0.
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = []
vsda = []
vscode-encrypt = []
